fix: layout header spacing

--- a/react-and-redux/readable/frontend/src/styles/index.scss
+++ b/react-and-redux/readable/frontend/src/styles/index.scss
@@ -640,6 +640,7 @@ $icon-plus: url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/sv
   color: $color-white-100;
   opacity: 0.96;
   box-shadow: $base-0 6px 24px 0 rgba(0, 0, 0, 0.90);
+  margin-bottom: 24px;
   header {
     font-size: 24px;
     font-style: italic;
